feat: F68 Quarterly Planning Production UI (v0.68.0)
Replace live quarterly planning page with 3-tab design (Projects, Readiness, Teams)
powered by real data. Add projects-overview and teams-overview backend endpoints
with planning status, coverage metrics, and demand calculation. Remove prototype page.

Includes accumulated changes: F65-F67 features, metrics redesign, priority icons,
quarter filter, worklog timeline, delivery health, and related tests/docs.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>